--- a/index.ipynb
+++ b/index.ipynb
@@ -384,11 +384,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<folium.map.Marker at 0x7f66c22d8668>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "neighborhood_marke"
+    "neighborhood_markers [-1]"
    ]
   },
   {
